--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -40,6 +40,7 @@ it:
         practice_id: Pratica
         first_name: Nome
         last_name: Cognome
+        sex: Sesso
         mobile: Cellulare
         email: E-Mail
         subscriber: Iscritto
